<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="history"
            type="com.cpc1hn.uimkk.model.History" />
    </data>
<LinearLayout
    android:background="?attr/backgroundColor1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="Thông tin tài khoản "
        app:titleTextColor="@color/white"
        android:background="@color/or"
        android:layout_width="match_parent"
        android:elevation="1dp"
        android:theme="@style/ToolbarTheme"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/btEdit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="40dp"
            android:layout_height="40dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/edit"
            android:contentDescription="Sửa thông tin"
            android:layout_marginRight="8dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/input_info_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/textview_device_title"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text_gray" />

        <TextView
            android:id="@+id/tvName"
            android:text="@{history.checkError()}"
            style="@style/textview_device_info" />

    </LinearLayout>

    <LinearLayout
        style="@style/input_info_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/textview_device_title"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/text_gray" />

        <TextView
            android:id="@+id/tvMail"
            style="@style/textview_device_info" />

    </LinearLayout>

    <LinearLayout
        style="@style/input_info_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/textview_device_title"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textColor="@color/text_gray" />

        <TextView
            android:id="@+id/tvRoom"
            style="@style/textview_device_info" />

    </LinearLayout>

    <LinearLayout
        style="@style/input_info_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/textview_device_title"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/text_gray" />

        <TextView
            android:id="@+id/tvPhone"
            style="@style/textview_device_info" />

    </LinearLayout>

    <LinearLayout
        style="@style/input_info_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/textview_device_title"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@color/text_gray" />

        <TextView
            android:id="@+id/tvSex"
            style="@style/textview_device_info" />

    </LinearLayout>
    <LinearLayout
        style="@style/input_info_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/textview_device_title"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/text_gray" />

        <TextView
            android:id="@+id/tvCode"
            style="@style/textview_device_info" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:padding="3dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btLogout"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>
</layout>